<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackgroundColorWhite"
    tools:context="com.scbupi.android.login_register.LoginBankAccountActivity">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/login_register_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="13dp">

            <TextView
                android:id="@+id/tvActivityHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/commonTextSize"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textColor="@color/activityHeadingTextColor"
                android:text="@string/loginActivityHeadingText"/>

            <ImageView
                android:layout_width="17dp"
                android:layout_height="18dp"
                android:layout_marginLeft="15dp"
                android:src="@drawable/back_arrow"
                android:layout_centerVertical="true"/>
            
        </RelativeLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/activityHeadingBottomLineColor"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="35dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/commonActivityLeftPadding"
            android:paddingRight="@dimen/commonActivityRightPadding">

            <TextView
                android:id="@+id/tvMainInstruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/commonMainInstructionMarginLeft"
                android:layout_marginRight="@dimen/commonMainInstructionMarginRight"
                android:textSize="@dimen/commonTextSize"
                android:textColor="@color/instructionTextColor"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/commonLineSpacing"
                android:text="@string/instructionLoginText"/>

            <EditText
                android:id="@+id/etUnm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_focus_selector"
                android:inputType="text"
                android:cursorVisible="false"
                android:textSize="@dimen/commonTextSize"
                android:paddingBottom="@dimen/commonTextViewPaddingBottom"
                android:layout_marginTop="35dp"
                android:maxLines="1"
                android:hint="@string/hintUnm"
                android:textColorHint="@color/hintNotFocusedColor"
                android:textColor="@color/etTextColor"/>

            <EditText
                android:id="@+id/etPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_focus_selector"
                android:cursorVisible="false"
                android:textSize="@dimen/commonTextSize"
                android:paddingBottom="@dimen/commonTextViewPaddingBottom"
                android:layout_marginTop="@dimen/commonVerticalDistanceBetweenTwoViews"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/hintPwd"
                android:textColorHint="@color/hintNotFocusedColor"
                android:textColor="@color/etTextColor"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/commonVerticalDistanceBetweenTwoViews">

                <ImageView
                    android:id="@+id/ivTerms"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_cb_not_selected"/>

                <TextView
                    android:id="@+id/tvIUnderstand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:lineSpacingExtra="@dimen/commonLineSpacing"
                    android:textSize="@dimen/commonTextSize"
                    android:layout_toRightOf="@+id/ivTerms"
                    android:textColor="@color/termsNotHighlightedColor"
                    android:text="@string/iUnderstand"/>

                <TextView
                    android:id="@+id/tvTermsOfUse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:lineSpacingExtra="@dimen/commonLineSpacing"
                    android:textSize="@dimen/commonTextSize"
                    android:layout_toRightOf="@+id/tvIUnderstand"
                    android:textColor="@color/colorAccent"
                    android:text="@string/termsOfUse"/>

            </RelativeLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/commonVerticalDistanceBetweenTwoViews"
                android:textSize="@dimen/commonTextSize"
                android:paddingTop="@dimen/buttonPaddingTop"
                android:paddingBottom="@dimen/buttonPaddingBottom"
                android:background="@color/buttonBackColor"
                android:text="@string/buttonLoginText"
                android:textColor="@color/buttonTextColor"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/commonActivityLeftPadding"
            android:paddingRight="@dimen/commonActivityRightPadding">

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:lineSpacingExtra="@dimen/commonLineSpacing"
                android:textSize="@dimen/commonTextSize"
                android:textColor="@color/colorAccent"
                android:text="@string/forgotUnmPwd"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
